Closed Bug 1586573 Opened 5 years ago Closed 5 years ago

checkbox is drawn with bad image when WebRender enabled

Categories

(Core :: Graphics: WebRender, defect, P2)

71 Branch
Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed

People

(Reporter: ayakawa.m, Assigned: jrmuizel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached file checkbox_test.html

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:71.0) Gecko/20100101 Firefox/71.0

Steps to reproduce:

  1. load sample attached file.
  2. scroll up and down quickly

Actual results:

checkbox is drawn with bad image

Expected results:

checkbox is drawn normaly

Attached image result image

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Graphics: WebRender
Product: Firefox → Core
Regressed by: 1568227

Still occurs on nightly, I initially couldn't reproduce when my browser was maximized.
Resizing the window and scrolling up and down triggered it straight away.

Jeff: Regression points at one of your changes. Can you take a look?

Flags: needinfo?(jmuizelaar)
OS: Unspecified → Windows 10
Priority: -- → P2
Hardware: Unspecified → Desktop

This happens at not only checkbox but also radio button and textbox.

This reverts to the previous behaviour for non-blob fallback images.

Flags: needinfo?(jmuizelaar)
Pushed by jmuizelaar@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bc8d1b6787dc
Don't use the visibleRect for non blob images. r=aosmond
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → jmuizelaar
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: