Bug 1586573. Don't use the visibleRect for non blob images. r=aosmond

This reverts to the previous behaviour for non-blob fallback images.

Differential Revision: https://phabricator.services.mozilla.com/D48631